samples/_failures_safe/1761265191_04eb2a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0ff8932b.c: In function ‘main’:
./samples/SAFE/__tmp_0ff8932b.c:165:9: error: expected declaration or statement at end of input
  165 |         fprintf(stderr, "Failed to create token array\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_0ff8932b.c:165:9: error: expected declaration or statement at end of input
